--- a/backend/package.json
+++ b/backend/package.json
@@ -32,7 +32,7 @@
     "handlebars": "^4.7.8",
     "helmet": "^8.0.0",
     "http-status-codes": "^2.3.0",
-    "ip": "^2.0.1",
+    "ip-address": "^10.0.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.10.0",
